# reproduce-wasmer-cranelift-bug

./: Cargo.toml
src/: lib.rs
