[package]
name = "reproduce-wasmer-cranelift-bug"
version = "0.1.0"
authors = ["vlakreeh <zeb@zebulon.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer = "1.0.0-beta1"
wasmer-compiler-cranelift = "1.0.0-beta1"
wasmer-engine-native = { version = "1.0.0-beta1", features = ["compiler"] }
wasmer-wasi = "1.0.0-beta1"
